--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,149 @@
-.App {
+@import url("https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
+@import url("https://fonts.googleapis.com/css?family=Slabo+27px");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower|Slabo+27px");
+
+body {
+  font-family: "Open Sans", serif;
+}
+
+.wrapper {
+  background: linear-gradient(to right, #2a4f6e, #718da5);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  height: 90vh;
+  background: #fff;
+  box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
+  width: 65%;
+  margin: 0 auto;
+}
+
+.title-container {
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  height: 90vh;
+  display: flex;
+  background: url("img/bg.jpg") center center no-repeat;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #222;
-  height: 120px;
-  padding: 30px;
-  color: white;
+.title-container:before {
+  content: "";
+  position: absolute;
+  background: rgba(200, 200, 200, 0.8);
 }
 
-.App-title {
-  font-size: 3em;
-  font-family: "Courier New", Courier, monospace;
+.title-container__img {
+  background: url("img/bg.jpg") center center no-repeat;
+  background-size: cover;
 }
 
-.horizontal-line {
-  width: 80%;
-  border-width: 2px;
+.title-container__title {
+  font-weight: 900;
+  font-size: 50px;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  font-family: "Roboto Slab", serif;
+}
+
+.title-container__subtitle {
+  padding-top: 10px;
+  font-style: italic;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  font-family: "Merriweather", serif;
+}
+
+.submit-container {
+  align-items: center;
+  justify-content: center;
+}
+
+.form-container {
+  padding-top: 10%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f6fc;
+}
+
+.form-container__label {
+  font-size: 30px;
+  padding: 10px;
+  letter-spacing: 1px;
+  line-height: 1.3;
+  font-family: "Indie Flower", cursive;
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1.5px #e04000;
+  width: 50%;
+  padding-bottom: 4px;
+  color: black !important;
+  font-weight: lighter;
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+  font-size: 20px;
+}
+
+input[type="text"] {
+  outline: none;
+}
+
+button {
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #f16051;
+  color: #fff;
+  font-weight: 100;
+}
+
+button:active {
+  outline: none;
+}
+
+.weather__info {
+  width: 60%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+.weather__key {
+  color: #f16051;
+  border-bottom: solid 2px rgba(255, 255, 255, 0.06);
+  padding: 20px 0 20px 0;
+  font-weight: 400;
+}
+
+.weather__key:last-child {
+  border: 0;
+}
+
+.weather__value {
+  color: #fff;
+  font-weight: 200;
+}
+
+.weather__error {
+  color: #f16051;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-weight: 200;
 }
